# planetary-rain

./: .gitignore  readme.md
src/: CMakeLists.txt  callbacks.cpp  callbacks.h  camera.cpp  camera.h  config.h  context.cpp  context.h  debug.cpp  debug.h  draw.cpp  draw.h  envMap.cpp  envMap.h  framework.cpp  framework.h  game.cpp  game.h  gameObjects.h  gamestate.h  light.cpp  light.h  main.cpp  meshGeometry.cpp  meshGeometry.h  modelTexture.cpp  modelTexture.h  noise.cpp  noise.h  object.cpp  object.h  scene.cpp  scene.h  shaderProgram.cpp  shaderProgram.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  ui.cpp  (+5 more)
src/models/: torch.fbx
src/models/boy/: default.fbx
src/models/girl/: default.fbx  handFront.fbx  headA.fbx  headB.fbx  headDown.fbx  headUp.fbx  runA.fbx  runB.fbx
src/shaders/: clouds.vert  planet.frag  planet.vert  refractive.frag  shadow.frag  shadow.vert  skybox.frag  skybox.vert  template.frag  template.vert
src/textures/: cross.frag  cross.vert  player.frag  player.vert  skybox.frag  skybox.vert  skyobject.frag  skyobject.vert  terrain.frag  terrain.vert  trees.frag  trees.vert
